<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2sp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/loginback"
    tools:context="com.deveshkumargmail.classroomchat.LoginPage2">



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/loginping" android:contentDescription="@string/todo" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:textColor="#34495e"
        android:gravity="center"
        android:layout_marginBottom="20sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="10sp"
        android:orientation="vertical"
        android:gravity="center"
        >

        <EditText
            android:background="#eaf2f8"
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/email"
            android:layout_marginBottom="10sp"/>

        <EditText
            android:background="#eaf2f8"
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/password"
            android:layout_marginBottom="10sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"

            android:id="@+id/loginButton"
            android:layout_marginBottom="20sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register"
            android:text="@string/click_here_to_register"
            android:layout_marginTop="39sp"
            android:layout_marginBottom="20sp"/>



    </LinearLayout>

</LinearLayout>
