<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:padding="5sp"
    android:background="@drawable/loginbackmain"
    tools:context="com.deveshkumargmail.classroomchat.LoginPage">




    <LinearLayout
        android:paddingTop="10sp"
        tools:ignore="NotSibling"
        android:gravity="center"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toplayout">

        <TextView
            android:textColor="#1c2833"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_room_chat_app"
            android:textSize="22sp"
            android:layout_margin="12sp"
            android:id="@+id/texfftView"
            />


    </LinearLayout>

    <LinearLayout
        android:paddingTop="30sp"
        tools:ignore="NotSibling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toplayoutt"
        android:layout_below="@id/toplayout"

        >

        <ImageView
            android:id="@+id/me"
            android:layout_width="340dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:background="@drawable/messengerpng"
            android:contentDescription="@string/todo"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toplayoutt"
        android:gravity="center"
        android:id="@+id/linearLayout"
        tools:ignore="NotSibling"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developed_by"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#ffff"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Devesh_Km_Sharma"
            android:textColor="#ffffff"
            android:textSize="29sp" />

    </LinearLayout>

</RelativeLayout>
